<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/photo_popwindow_photo_top_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/photo_pop_txt_camera"
            android:layout_width="fill_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="17dp"
            android:gravity="left|center"
            android:text="@string/photo_pop_camera"
            android:textColor="@color/photo_menu_text_color"
            android:textSize="15sp" />

        <View style="@style/photo_cut_off_line2" />

        <TextView
            android:id="@+id/photo_pop_txt_local"
            android:layout_width="fill_parent"
            android:layout_height="43dp"
            android:layout_marginLeft="17dp"
            android:gravity="left|center"
            android:text="@string/photo_pop_local"
            android:textColor="@color/photo_menu_text_color"
            android:textSize="15sp" />

        <View style="@style/photo_cut_off_line2" />

        <Button
            android:id="@+id/dialog_button"
            android:layout_width="fill_parent"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/photo_popwindow_photo_bottom_bg"
            android:gravity="center"
            android:text="@string/photo_dialog_cancel"
            android:textColor="@color/photo_repair_font_color"
            android:textSize="15sp" />
    </LinearLayout>
</FrameLayout>
