<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/core_white">


        <LinearLayout
            android:id="@+id/photo_local_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View style="@style/photo_cut_off_line1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="17dp"
                    android:text="@string/photo_local_title"
                    android:textColor="@color/photo_repair_font_color"
                    android:textSize="12sp" />


            </RelativeLayout>

            <View style="@style/photo_cut_off_line2" />


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/photo_local_choose_bottom"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_alignParentBottom="true"
            android:background="#e0000000"
            android:clickable="true"
            android:visibility="gone">

            <TextView
                android:id="@+id/photo_local_choose_dir"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/photo_local_all"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/photo_local_total_count"
                android:layout_width="50dip"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/photo_local_zero"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <GridView
            android:id="@+id/photo_local_gridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@android:color/transparent"
            android:clipChildren="true"
            android:gravity="center"
            android:horizontalSpacing="3dip"
            android:listSelector="@android:color/transparent"
            android:numColumns="4"
            android:stretchMode="columnWidth"
            android:verticalSpacing="3dip"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/button_confirm"
            android:layout_below="@+id/photo_local_title"></GridView>

        <LinearLayout
            android:id="@+id/button_confirm"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@drawable/photo_dolaig_sure_bload_line"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/sure_save_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/photo_dialog_confirm"
                    android:textColor="@color/core_white" />

                <TextView
                    android:id="@+id/sure_save_count"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textColor="@color/core_white" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>
